consommé l'api getPartieByIdJoueur
