# Scrabble-BackEnd/routes/api.php
@@ -19,7 +19,7 @@ Route::controller(JoueurController::class)->prefix("v1")->group(static function 
 });
 Route::controller(PartieController::class)->prefix("v1")->group(static function () {
     Route::get("/partie/{idPartie}",[PartieController::class ,"getPartieById"]);
-    Route::get("/partie/joueur/{idJoueur}",[PartieController::class ,"getJoueursPartieByIdJoueur"]);
+    Route::get("/partie/joueur/{idJoueur}",[PartieController::class ,"getPartieByIdJoueur"]);
 });
 
 
